Tidy up, fixed stupid close connection every 5 requests bug and more tiding of URI / URL stuff..